@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-09T08:19:45Z",
-  "count_outdated" : 260,
-  "uniques_outdated" : 138,
-  "count" : 287,
+  "timestamp" : "2022-05-10T01:06:09Z",
+  "count_outdated" : 261,
+  "uniques_outdated" : 139,
+  "count" : 288,
   "uniques" : 158,
   "clones" : [
-    {
-      "timestamp": "2022-04-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-04-28T00:00:00Z",
       "count": 1,
@@ -63,8 +56,8 @@
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
