@@ -1,3 +1,9 @@
+2022-05-10T01:06:09Z:
+* notice: last 14d: all unq: 27 13
+* notice: prev accum: outdated-all outdated-unq / all unq: 260 138 / 287 158
+* notice: next accum: outdated-all outdated-unq / all unq: 261 139 / 288 158
+* notice: prev json diff // prev day diff: unq all: +0 +1 / -0 -0 // +0 +1 / -0 -0
+
 2022-05-09T08:19:45Z:
 * notice: last 14d: all unq: 27 13
 * notice: prev accum: outdated-all outdated-unq / all unq: 260 138 / 286 157
